feat: educational profile page structure

--- a/src/app/layout.scss
+++ b/src/app/layout.scss
@@ -7,6 +7,12 @@
   background-color: #f4f6f9;
 }
 
+.subsection-title {
+  font-size: 1.1rem;
+  font-weight: 400;
+  margin: 0;
+}
+
 .amcharts-visualization {
   width: 100%;
   height: 640px;
