feat: educational profile custom data, information and colors

--- a/src/app/layout.scss
+++ b/src/app/layout.scss
@@ -7,9 +7,17 @@
   background-color: #f4f6f9;
 }
 
+.info-box .info-box-number {
+  font-size: 1.2rem;
+}
+
+blockquote.highlight {
+  margin: 15px 0px 15px 0px;
+}
+
 .subsection-title {
   font-size: 1.1rem;
-  font-weight: 400;
+  font-weight: bold;
   margin: 0;
 }
 
